; ModuleID = '/home/carl/AnghaBench/linux/drivers/cpufreq/extr_sparc-us2e-cpufreq.c_self_refresh_ctl.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/cpufreq/extr_sparc-us2e-cpufreq.c_self_refresh_ctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HBIRD_MEM_CNTL0_ADDR = common dso_local global i32 0, align 4
@MCTRL0_SREFRESH_ENAB = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @self_refresh_ctl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @self_refresh_ctl(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @HBIRD_MEM_CNTL0_ADDR, align 4
  %5 = call i64 @read_hbreg(i32 %4)
  store i64 %5, i64* %3, align 8
  %6 = load i32, i32* %2, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %12

8:                                                ; preds = %1
  %9 = load i64, i64* @MCTRL0_SREFRESH_ENAB, align 8
  %10 = load i64, i64* %3, align 8
  %11 = or i64 %10, %9
  store i64 %11, i64* %3, align 8
  br label %17

12:                                               ; preds = %1
  %13 = load i64, i64* @MCTRL0_SREFRESH_ENAB, align 8
  %14 = xor i64 %13, -1
  %15 = load i64, i64* %3, align 8
  %16 = and i64 %15, %14
  store i64 %16, i64* %3, align 8
  br label %17

17:                                               ; preds = %12, %8
  %18 = load i32, i32* @HBIRD_MEM_CNTL0_ADDR, align 4
  %19 = load i64, i64* %3, align 8
  %20 = call i32 @write_hbreg(i32 %18, i64 %19)
  %21 = load i32, i32* @HBIRD_MEM_CNTL0_ADDR, align 4
  %22 = call i64 @read_hbreg(i32 %21)
  ret void
}

declare dso_local i64 @read_hbreg(i32) #1

declare dso_local i32 @write_hbreg(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
